--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Fart Ticker – Crypto Only</title>
+  <title>Fart Ticker – Support with Stripe</title>
   <style>
     body { font-family: sans-serif; text-align: center; margin-top: 2em; background: #111; color: #fff; }
     h1 { font-size: 2em; }
@@ -50,8 +50,10 @@
   <button id="play" onclick="playStretched()">▶️ Play Sound</button>
 
   <div class="donate">
-    <a href="https://www.buymeacoffee.com/fartticker" target="_blank">
-      <img src="https://cdn.buymeacoffee.com/buttons/v2/default-yellow.png" alt="Buy Me A Coffee" style="height: 50px !important;width: 217px !important;">
+    <a href="https://buy.stripe.com/cNi6oJevgdUi0ZR5TogrS00" target="_blank">
+      <button style="margin-top:2em; padding:1em 2em; font-size:1.2em; background:#00d084; color:#111; border:none; border-radius:8px; cursor:pointer;">
+        💸 Support via Stripe
+      </button>
     </a>
   </div>
 
