--- a/index.html
+++ b/index.html
@@ -25,12 +25,23 @@
     h1 {
       font-size: 2.2em;
       margin-bottom: 0.3em;
-      animation: wobble 2s infinite ease-in-out;
+      position: relative;
     }
-    @keyframes wobble {
-      0%, 100% { transform: rotate(0deg); }
-      25% { transform: rotate(1deg); }
-      75% { transform: rotate(-1deg); }
+    .trail {
+      display: inline-block;
+      position: relative;
+    }
+    .trail::after {
+      content: "💨";
+      position: absolute;
+      left: 100%;
+      top: 0;
+      animation: puff 3s infinite;
+      font-size: 1.5em;
+    }
+    @keyframes puff {
+      0% { transform: translateY(0) scale(1); opacity: 1; }
+      100% { transform: translateY(-50px) scale(1.8); opacity: 0; }
     }
     #description {
       font-size: 0.9em;
@@ -86,12 +97,12 @@
 </head>
 <body data-theme="dark">
 
-  <h1>Fart Ticker 💨</h1>
+  <h1 class="trail">Fart Ticker</h1>
   <div id="description">This page turns crypto price changes into fart sounds.</div>
 
   <div class="ticker-buttons">
-    <button onclick="setAsset('bitcoin')">Bitcoin</button>
-    <button onclick="setAsset('ethereum')">Ethereum</button>
+    <button onclick="setAsset('bitcoin')">🚀 Bitcoin</button>
+    <button onclick="setAsset('ethereum')">♦ Ethereum</button>
   </div>
 
   <div id="prices"><p>Loading...</p></div>
