--- a/index.html
+++ b/index.html
@@ -99,6 +99,31 @@
 
   <h1 class="trail">Fart Ticker</h1>
   <div id="description">This page turns crypto price changes into fart sounds.</div>
+  <div id="tagline" style="font-style:italic; margin-top:0.5em; color:gray;"></div>
+  <div style="margin: 1em;">
+    <select id="tickerDropdown" onchange="changeTicker(this.value)">
+      <option value="">📊 Select a Ticker</option>
+      <option value="bitcoin">🚀 Bitcoin</option>
+      <option value="ethereum">♦ Ethereum</option>
+      <option value="dogecoin">🐶 Dogecoin</option>
+      <option value="solana">🌞 Solana</option>
+      <option value="tesla">🚗 Tesla (TSLA)</option>
+      <option value="apple">🍎 Apple (AAPL)</option>
+      <option value="amazon">📦 Amazon (AMZN)</option>
+      <option value="microsoft">🪟 Microsoft (MSFT)</option>
+      <option value="google">🔍 Google (GOOG)</option>
+      <option value="meta">📘 Meta (META)</option>
+    </select>
+  </div>
+
+  <script>
+    const taglines = ['Today’s market movement? Downwind.', 'Farted +3.4% overnight.', 'Holding strong... like last night’s burrito.', 'Markets passed gas. Did you hear it?', 'When crypto moves, we toot.', 'Sound investing, literally.', 'Wall Street’s whoopee cushion.', 'The only ticker that stinks by design.', 'Flatulent but accurate.', 'Today’s sound? Full-bodied.'];
+    document.addEventListener('DOMContentLoaded', () => {
+      const tagline = taglines[Math.floor(Math.random() * taglines.length)];
+      document.getElementById('tagline').textContent = tagline;
+    });
+  </script>
+
 
   <div class="ticker-buttons">
     <button onclick="setAsset('bitcoin')">🚀 Bitcoin</button>
@@ -197,7 +222,9 @@
     setAsset('bitcoin');
   </script>
 
-  <!-- Cloudflare Web Analytics -->
+  <div id="view-counter" style="margin-top:2em; font-size:0.9em; color:gray;">🔢 Visitors tracked by Cloudflare</div>
+
+<!-- Cloudflare Web Analytics -->
   <script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "00000000-0000-0000-0000-000000000000"}'></script>
 </body>
 </html>
