--- a/index.html
+++ b/index.html
@@ -216,6 +216,11 @@
 </body>
 </html>
 
+  
+  <div style="margin-top: 2em;">
+    <button onclick="toggleTheme()" style="padding: 0.5em 1em;">🌓 Toggle Theme</button>
+  </div>
+
   <footer style="margin-top:3em; font-size:0.8em; color:gray;">
     © FartTicker.com 2025 💨 All rights reserved.
   </footer>
