--- a/index.html
+++ b/index.html
@@ -106,6 +106,11 @@
 
   <div id="prices"><p>Loading...</p></div>
 
+  <div class="controls">
+    <button onclick="setAsset(currentAsset)">🔄 Refresh</button>
+    <button id="pitchToggle" onclick="togglePitch()">💃 For the Ladies</button>
+  </div>
+
   <button id="play" onclick="playStretched()">Hear the Price Change 💨</button>
 
   <div class="animation" id="animation">💨💸</div>
@@ -194,7 +199,7 @@
       const source = audioContext.createBufferSource();
       window.source = source;
       source.buffer = audioBuffer;
-      source.playbackRate.value = 1 / (1 + Math.abs(percentChange));
+      source.playbackRate.value = (pitchUp ? 2 : 1) / (1 + Math.abs(percentChange));
       source.connect(audioContext.destination);
       source.start();
 
@@ -228,3 +233,13 @@
   </script>
 </body>
 </html>
+
+<script>
+  let pitchUp = false;
+
+  function togglePitch() {
+    pitchUp = !pitchUp;
+    const btn = document.getElementById("pitchToggle");
+    btn.textContent = pitchUp ? "🕺 Back to the Boys" : "💃 For the Ladies";
+  }
+</script>
