--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 </head>
 <body data-theme="dark">
 
-  <h1 class="trail" style="position: relative;">Fart Ticker<span style="position: absolute; left: 100%; top: 0; animation: puff 3s infinite; font-size: 1.5em;">💨</span></h1>
+  <h1 class="trail">Fart Ticker 💨</h1>
   <div id="description">This page turns crypto price changes into fart sounds.</div>
   <div id="tagline" style="font-style:italic; margin-top:0.5em; color:gray;"></div>
 
