--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 
   <h1 class="trail">Fart Ticker 💨</h1>
   <div id="description">This page turns crypto price changes into fart sounds.</div>
-  <div id="tagline" style="font-style:italic; margin-top:0.5em; color:gray;"></div>
+  <div id="tagline" style="font-style:italic; margin-top:0.5em; margin-bottom:1.5em; color:gray;"></div>
 
   <div class="ticker-buttons">
     <button onclick="setAsset('bitcoin')">🚀 Bitcoin</button>
