--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 
   <div id="prices"><p>Loading...</p></div>
 
-  <button id="play" onclick="playStretched()">▶️ Hear the Price Change</button>
+  <button id="play" onclick="playStretched()">▶️ Play the Price Change</button>
 
   <div class="controls">
     <button onclick="setAsset(currentAsset)">🔄 Refresh</button>
@@ -107,7 +107,7 @@
   <div class="donate">
     <a href="https://buy.stripe.com/cNi6oJevgdUi0ZR5TogrS00" target="_blank">
       <button style="padding:1em 2em; font-size:1.2em; background:#00d084; color:#111; border:none; border-radius:8px; cursor:pointer;">
-        💸 Support via Stripe
+        💸 Support My Art via Stripe
       </button>
     </a>
   </div>
