--- a/index.html
+++ b/index.html
@@ -95,7 +95,9 @@
 
   <div id="prices"><p>Loading...</p></div>
 
+  <div style="margin: 2em 0;">
   <button id="play" onclick="playStretched()">▶️ Play the Price Change</button>
+</div>
 
   <div class="controls">
     <button onclick="setAsset(currentAsset)">🔄 Refresh</button>
