--- a/index.html
+++ b/index.html
@@ -93,17 +93,17 @@
       width: 100%;
       height: 100%;
       pointer-events: none;
-      background-image: radial-gradient(circle, rgba(255,192,203,0.4) 2px, transparent 2px),
-                        radial-gradient(circle, rgba(255,182,193,0.4) 2px, transparent 2px);
-      background-size: 20px 20px;
-      background-position: 0 0, 10px 10px;
-      animation: glitter 3s linear infinite;
+      background-image: radial-gradient(circle, rgba(255,105,180,0.3) 3px, transparent 3px),
+                        radial-gradient(circle, rgba(255,182,193,0.3) 3px, transparent 3px);
+      background-size: 30px 30px;
+      background-position: 0 0, 15px 15px;
+      animation: floatHearts 6s linear infinite;
       z-index: 0;
     }
 
-    @keyframes glitter {
-      0% { background-position: 0 0, 10px 10px; }
-      100% { background-position: 20px 20px, 30px 30px; }
+    @keyframes floatHearts {
+      0% { background-position: 0 0, 15px 15px; }
+      100% { background-position: 60px 60px, 75px 75px; }
     }
 
     body > *:not(script):not(style):not(link):not(meta) {
