--- a/index.html
+++ b/index.html
@@ -1,4 +1,89 @@
 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Fart Ticker💨</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <style>
+    :root {
+      --bg: #111;
+      --fg: #fff;
+    }
+    [data-theme="light"] {
+      --bg: #fff;
+      --fg: #111;
+    }
+    body {
+      font-family: sans-serif;
+      text-align: center;
+      margin-top: 2em;
+      background: var(--bg);
+      color: var(--fg);
+      transition: background 0.3s, color 0.3s;
+    }
+    h1 {
+      font-size: 2.2em;
+      margin-bottom: 0.3em;
+    }
+    #description {
+      font-size: 0.9em;
+      margin: 0.5em 0 1em;
+      color: gray;
+    }
+    #tagline {
+      font-style: italic;
+      margin: 0.5em 0 1.5em;
+      color: gray;
+    }
+    #prices { margin: 1em 0; }
+    .ticker-buttons button {
+      margin: 0.5em;
+      padding: 0.7em 1.2em;
+      font-size: 1em;
+      border: none;
+      border-radius: 8px;
+      background: #222;
+      color: #fff;
+      cursor: pointer;
+    }
+    .ticker-buttons button:hover {
+      background: lime;
+      color: black;
+    }
+    #play {
+      margin: 0.4em 0;
+      padding: 1em 2em;
+      font-size: 1.2em;
+      background: lime;
+      border: none;
+      border-radius: 8px;
+      cursor: pointer;
+    }
+    .controls button {
+      margin: 0.25em;
+      padding: 0.5em 1em;
+      background: #444;
+      color: #fff;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+    }
+    .animation {
+      margin-top: 1em;
+      font-size: 2em;
+      display: none;
+    }
+    .show { display: block; animation: float 1s ease-out; }
+    @keyframes float {
+      0% { transform: translateY(0); opacity: 0; }
+      50% { opacity: 1; }
+      100% { transform: translateY(-20px); opacity: 0; }
+    }
+    .ladies-mode {
+      background: linear-gradient(135deg, #2a2a2a, #3a1f30, #50263f);
+      background-attachment: fixed;
+    }
     .ladies-mode::before {
       content: '';
       position: fixed;
@@ -14,13 +99,137 @@
       animation: floatHearts 6s linear infinite;
       z-index: 0;
     }
-
     @keyframes floatHearts {
       0% { background-position: 0 0, 15px 15px; }
       100% { background-position: 60px 60px, 75px 75px; }
     }
-
     body > *:not(script):not(style):not(link):not(meta) {
       position: relative;
       z-index: 1;
     }
+  </style>
+</head>
+<body data-theme="dark">
+
+  <h1>Fart Ticker 💨</h1>
+  <div id="description">This page turns crypto price changes into fart sounds.</div>
+  <div id="tagline"></div>
+
+  <div class="ticker-buttons">
+    <button onclick="setAsset('bitcoin')">🚀 Bitcoin</button>
+    <button onclick="setAsset('ethereum')">♦ Ethereum</button>
+    <button onclick="setAsset('dogecoin')">🐶 Dogecoin</button>
+    <button onclick="setAsset('solana')">🌞 Solana</button>
+  </div>
+
+  <div id="prices"><p>Loading...</p></div>
+
+  <div style="margin: 0.4em 0;">
+    <button id="play" onclick="playStretched()">▶️ Play the Price Change</button>
+  </div>
+
+  <div class="controls">
+    <button onclick="setAsset(currentAsset)">🔄 Refresh</button>
+    <button id="pitchToggle" onclick="togglePitch()">💃 For the Ladies</button>
+  </div>
+
+  <div class="animation" id="animation">💨💸</div>
+
+  <div class="donate" style="margin-top:2em;">
+    <a href="https://buy.stripe.com/cNi6oJevgdUi0ZR5TogrS00" target="_blank">
+      <button style="padding:1em 2em; font-size:1.2em; background:#00d084; color:#111; border:none; border-radius:8px; cursor:pointer;">
+        💸 Support My Art via Stripe
+      </button>
+    </a>
+    <a href="https://cb.id/fartticker" target="_blank">
+      <button style="padding:1em 2em; font-size:1.2em; background:#ff69b4; color:#fff; border:none; border-radius:8px; cursor:pointer; margin-left: 1em;">
+        🪙 Tip Me in Crypto
+      </button>
+    </a>
+  </div>
+
+  <footer style="margin-top:3em; font-size:0.8em; color:gray;">
+    © FartTicker.com 2025 💨 All rights reserved.
+  </footer>
+
+  <script>
+    const taglines = [
+      "Today’s market movement? Downwind.",
+      "Farted +3.4% overnight.",
+      "Holding strong... like last night’s burrito.",
+      "Markets passed gas. Did you hear it?",
+      "When crypto moves, we toot.",
+      "Sound investing, literally.",
+      "Wall Street’s whoopee cushion.",
+      "The only ticker that stinks by design.",
+      "Flatulent but accurate.",
+      "Today’s sound? Full-bodied."
+    ];
+    document.addEventListener('DOMContentLoaded', () => {
+      const tagline = taglines[Math.floor(Math.random() * taglines.length)];
+      document.getElementById('tagline').textContent = tagline;
+    });
+
+    let percentChange = 0;
+    let currentAsset = 'bitcoin';
+    let pitchUp = false;
+
+    async function fetchCoinGecko(asset) {
+      const res = await fetch(`https://api.coingecko.com/api/v3/coins/${asset}`);
+      const data = await res.json();
+      const price = data.market_data.current_price.usd;
+      const change = data.market_data.price_change_percentage_24h;
+      const yesterday = price / (1 + change / 100);
+      percentChange = parseFloat(change.toFixed(2));
+      document.getElementById('prices').innerHTML = `
+        <p>📈 ${asset.toUpperCase()}</p>
+        <p>💰 Current Price: $${price.toFixed(2)}</p>
+        <p>🕒 Yesterday's Price: $${yesterday.toFixed(2)}</p>
+        <p><strong>Change: ${percentChange}%</strong></p>
+      `;
+    }
+
+    function setAsset(asset) {
+      currentAsset = asset;
+      fetchCoinGecko(asset);
+    }
+
+    async function playStretched() {
+      if (window.source) {
+        try { window.source.stop(); } catch(e) {}
+        window.source.disconnect();
+      }
+      if (window.audioContext) {
+        window.audioContext.close().catch(() => {});
+      }
+      const audioContext = new AudioContext();
+      window.audioContext = audioContext;
+
+      const isUp = percentChange >= 0;
+      const file = isUp ? 'FART_1SEC_FORWARD.mp3' : 'FART_1SEC_REVERSE.mp3';
+      const response = await fetch(file);
+      const arrayBuffer = await response.arrayBuffer();
+      const audioBuffer = await audioContext.decodeAudioData(arrayBuffer);
+
+      const source = audioContext.createBufferSource();
+      window.source = source;
+      source.buffer = audioBuffer;
+      source.playbackRate.value = (pitchUp ? 2 : 1) / (1 + Math.abs(percentChange));
+      source.connect(audioContext.destination);
+      source.start();
+
+      document.getElementById('animation').classList.add('show');
+      setTimeout(() => document.getElementById('animation').classList.remove('show'), 1000);
+    }
+
+    function togglePitch() {
+      pitchUp = !pitchUp;
+      const btn = document.getElementById("pitchToggle");
+      btn.textContent = pitchUp ? "🕺 Back to the Boys" : "💃 For the Ladies";
+      document.body.classList.toggle("ladies-mode", pitchUp);
+    }
+
+    setAsset('bitcoin');
+  </script>
+</body>
+</html>
